--- a/pacman_analysis.ipynb
+++ b/pacman_analysis.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "57316b4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e7864996",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +63,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f9837acc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +73,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "534b61e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d67aa318",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +113,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d2886356",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +147,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "246f297c",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +183,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "03308662",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +216,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c047c28-1c1b-4759-a925-c73470839500",
    "metadata": {},
    "source": [
     "<h1> Project Check-In </h1>"
@@ -233,7 +224,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c7dd5c70",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aba6da46-1c75-4f6e-81ea-879b621da84a",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +292,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "16218601-31a9-4747-9a8a-ac8cc591f983",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +324,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0e5d1a2e-9d73-4f04-a994-21f38349cfcf",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +356,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -383,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
